# hccivm

./: .gitignore  README.md  package.json  pnpm-lock.yaml
docs/: API.md  DataFormat.md  Permissions.md  README.md
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/public/: index.html  manifest.json
frontend/src/: App.jsx  index.js  main.tsx  meta.tsx
frontend/src/base/: BaseAppLayout.tsx  BaseRouter.tsx  ErrorPage.tsx
frontend/src/components/branding/: Logo.tsx
frontend/src/components/items/: ItemField.tsx  ItemRow.tsx
frontend/src/components/items/fields/: ItemFieldText.tsx
frontend/src/contexts/: APIContext.tsx  AuthContext.tsx
frontend/src/contexts/inventories/: SchemaContext.tsx
frontend/src/hooks/: useApi.tsx
frontend/src/lib/: Controller.js  Logger.ts
frontend/src/lib/storage/: mapper.js  store.ts
frontend/src/lib/storage/providers/: IndexedDB.ts  LocalJSON.ts  LocalJSONSingle.ts
frontend/src/lib/types/: Item.ts  inventory.ts  schema.ts  user.ts
frontend/src/lib/utils/: markdownToHTML.ts
frontend/src/pages/: HomePage.tsx
server/: Cargo.toml
server-rust/: Cargo.toml
server-rust/src/: main.rs
server-rust/src/db/: sqlite.rs
server-rust/src/model/: inventory.rs  item.rs  namespace.rs
server-rust/src/routes/api/: mod.rs
server-rust/src/traits/: mod.rs
server/src/: main.rs
server/src/db/: memory.rs  mod.rs  sqlite_memory.rs
server/src/model/: action.rs  mod.rs  namespace.rs
server/src/traits/: mod.rs
