[package]
name = "hccivm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.72"
serde = "1.0"
serde_json = "1.0.103"
tokio = { version = "1", features = ["full"] }
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
rusqlite = { version = "0.29.0", features = ["bundled", "serde_json"] }
thiserror = "1.0.44"
