[package]
name = "hccivm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.72"
serde = "1.0"
serde_json = "1.0.103"
tokio = { version = "1", features = ["full"] }
rocket = "=0.5.0-rc.3"
